--- a/install
+++ b/install
@@ -37,12 +37,20 @@ then
   /usr/local/bin/brew install rcm
 fi
 
+# Company DotFiles
 if [ ! -d "${DOTFILES_ROOT}/itsmycargo" ];
 then
   echo "--> Clone Dotfiles Repository"
   git clone https://github.com/itsmycargo/dotfiles.git "${DOTFILES_ROOT}/itsmycargo"
 else
   (cd "${DOTFILES_ROOT}/itsmycargo" ; git pull --rebase --autostash --quiet )
+fi
+
+# Private Dotfiles
+# Migrate local -> private
+if [ -d "${DOTFILES_ROOT}/local/.git" ];
+then
+  mv "${DOTFILES_ROOT}/local" "${DOTFILES_ROOT}/private"
 fi
 
 if [ -n "${github_user}" ];
@@ -53,6 +61,12 @@ then
   else
     (cd "${DOTFILES_ROOT}/private" ; git pull --rebase --autostash --quiet )
   fi
+fi
+
+# Local Ditfiles
+if [ ! -d "${DOTFILES_ROOT}/local" ];
+then
+  mkdir -p "${DOTFILES_ROOT}/local"
 fi
 
 # Run additional install scripts
