CHORE: stop using absolute paths for executables
* CHORE: As M1 stores applications in different directories, it makes no
  sense to use absolute paths when running Homebrew or the AWS CLI. The
  changes in this commit could protect us from future changes to MacOS and
  should make the installation easier to run on Linux distros.

--- a/install
+++ b/install
@@ -33,14 +33,18 @@ while true; do sudo -n true; sleep 60; kill -0 "$$" || exit; done 2>/dev/null &
 if [ -z "$(command -v brew)" ];
 then
   echo "--> Installing homebrew"
-    /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+
+  /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+  echo '# Set PATH, MANPATH, etc., for Homebrew.' >> $HOME/.zprofile
+  echo 'eval "$(/opt/homebrew/bin/brew shellenv)"' >> $HOME/.zprofile
+  eval "$(/opt/homebrew/bin/brew shellenv)"
 fi
 
 if [ -z "$(command -v rcup)" ];
 then
   echo "--> Installing rcm"
-  /usr/local/bin/brew tap thoughtbot/formulae
-  /usr/local/bin/brew install rcm
+  brew tap thoughtbot/formulae
+  brew install rcm
 fi
 
 # Company Dotfiles
